--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>CIS 160 portfolio</title>
 </head>
 <body>
 
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
-
+<a href="https://bb.cocc.edu/webapps/blackboard/execute/announcement?method=search&context=course_entry&course_id=_145190_1&handle=announcements_entry&mode=view">BlackBoard</a>
 </body>
 </html>
