--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 
     
-<h1>This is a Heading</h1>
+<h1>Portfolio  and index</h1>
 <p>This is a paragraph.</p>
-
+<a href="CIS 160 Scratch/">Scratch</a>
 
 
 
