--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     
 <h1>Portfolio  and index</h1>
 <p>This is a paragraph.</p>
-<a href="CIS 160 Scratch/">Scratch</a>
+
+
+<li href="CIS 160 Scratch/">Scratch</a></li>
 
 
 
 
 
-<a href="https://bb.cocc.edu/webapps/blackboard/execute/announcement?method=search&context=course_entry&course_id=_145190_1&handle=announcements_entry&mode=view">BlackBoard</a>
 <a href="https://bb.cocc.edu/webapps/blackboard/execute/announcement?method=search&context=course_entry&course_id=_145190_1&handle=announcements_entry&mode=view">BlackBoard</a>
 </body>
 </html>
