--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <p>This is a paragraph.</p>
 
 
-<li href="CIS 160 Scratch/index.html">Scratch</a></li>
+<a href="CIS 160 Scratch/index.html">Scratch</a>
 
 
 
