--- a/CIS 160 Scratch/index.html
+++ b/CIS 160 Scratch/index.html
@@ -8,5 +8,6 @@
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
 <a href="https://scratch.mit.edu/"Scratch"></a>
+<a href=".."Home></a>
 </body>
 </html>
