--- a/CIS 160 Scratch/index.html
+++ b/CIS 160 Scratch/index.html
@@ -7,7 +7,7 @@
 
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
-<a href="https://scratch.mit.edu/"Scratch"></a>
-<a href=".."Home></a>
+<a href="https://scratch.mit.edu/"Scratch></a>
+<a href="https://btetz40.github.io/"Home></a>
 </body>
 </html>
