--- a/CIS 160 Scratch/index.html
+++ b/CIS 160 Scratch/index.html
@@ -7,7 +7,6 @@
 
 <h1>Scratch home</h1>
 <p>This is a paragraph.</p>
-<a href="https://scratch.mit.edu/"Scratch></a>
-<a href="https://btetz40.github.io/"Home></a>
+<a href="..">Home</a>
 </body>
 </html>
