--- a/CIS 160 Scratch/index.html
+++ b/CIS 160 Scratch/index.html
@@ -7,6 +7,6 @@
 
 <h1>Scratch home</h1>
 <p>This is a paragraph.</p>
-<a href="https://btetz40.github.io/">Home</a>
+<a href="../btetz40.github.io/">Home</a>
 </body>
 </html>
