--- a/CIS160Scratch/index.html
+++ b/CIS160Scratch/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>Scratch home</h1>
-<p>This is a paragraph.</p>
+<p>Maybe?.</p>
 <a href="https://btetz40.github.io/">Home</a>
 </body>
 </html>
