--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <a href="CIS160Scratch/index.html">Scratch</a>
 
 
-<a href-"Help/index.html">Help</a>
+<a href="hlep/index.html">Help</a>
 
 
 <a href="https://bb.cocc.edu/webapps/blackboard/execute/announcement?method=search&context=course_entry&course_id=_145190_1&handle=announcements_entry&mode=view">BlackBoard</a>
