--- a/index.html
+++ b/index.html
@@ -1,26 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>CIS 160 portfolio</title>
-<!-- link to main stylesheet -->
-<link rel="stylesheet" type="text/css" href="/css/main.css">
-</head>
-<body>
-
-
-
-
-    
-<h1>Portfolio  and index</h1>
-<p>This is a paragraph.</p>
-
-
-<a href="CIS160Scratch/index.html">Scratch</a>
-
-
-<a href="hlep/index.html">Help</a>
-
-
-<a href="https://bb.cocc.edu/webapps/blackboard/execute/announcement?method=search&context=course_entry&course_id=_145190_1&handle=announcements_entry&mode=view">BlackBoard</a>
-</body>
-</html>
+---
+layout: default
+title: Computer Science
+---
+<div class="blurb">
+    <h1> Computer Science</h1>
+    <p>BLAH BLAH BLAH</p>
+    <a href=https://www.cocc.edu/home/student-login.aspx>BlackBoard</a>
+    <a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch</a>
+    <a href=https://btetz40.github.io/hlep/index.html>Help</a>
+</div><!-- /.blurb -->
