--- a/hlep/index.html
+++ b/hlep/index.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>CIS 160 Scratch</title>
-</head>
-<body>
-
-<h1>Help Recources</h1>
-<p>Maybe?.</p>
-<a href="https://btetz40.github.io/">Home</a>
-
-</body>
-</html>
+---
+layout: default
+title: Computer Science
+---
+<div class="blurb">
+    <h1> Computer Science</h1>
+    <p>BLAH BLAH BLAH</p>
+    <a href=https://www.cocc.edu/home/student-login.aspx>BlackBoard</a>
+    <a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch</a>
+    <a href=https://btetz40.github.io/hlep/index.html>Help</a>
+</div><!-- /.blurb -->
