--- a/hlep/index.html
+++ b/hlep/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: Computer Science
+title: Help & Resources
 ---
 <div class="blurb">
-    <h1> Computer Science</h1>
+    <h1>Help & Resources</h1>
     <p>BLAH BLAH BLAH</p>
     <a href=https://www.cocc.edu/home/student-login.aspx>BlackBoard</a>
     <a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch</a>
-    <a href=https://btetz40.github.io/hlep/index.html>Help</a>
+    <a href=https://btetz40.github.io/>Home</a>
 </div><!-- /.blurb -->
