--- a/hlep/index.html
+++ b/hlep/index.html
@@ -7,5 +7,5 @@ title: Help & Resources
     <p>BLAH BLAH BLAH</p>
     <a href=https://www.cocc.edu/home/student-login.aspx>BlackBoard</a>
     <a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch</a>
-    <a href=https://btetz40.github.io/>Home</a>
+    <a href=https://btetz40.github.io/index.html>Home</a>
 </div><!-- /.blurb -->
