--- a/CIS160Scratch/index.html
+++ b/CIS160Scratch/index.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>CIS 160 Scratch</title>
-</head>
-<body>
-
-<h1>Scratch home</h1>
-<p>Maybe?.</p>
-<a href="https://btetz40.github.io/">Home</a>
-
-</body>
-</html>
+---
+layout: default
+title:  Scratch
+---
+<div class="blurb">
+    <h1>Scratch</h1>
+    <p>BLAH BLAH BLAH</p>
+    <a href=https://www.cocc.edu/home/student-login.aspx>BlackBoard</a>
+    <a href=https://btetz40.github.io/hlep/index.html>Help</a>
+    <a href=https://btetz40.github.io/index.html>Home</a>
+</div><!-- /.blurb -->
