--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Computer Science
 ---
 <div class="blurb">
     <h1> Computer Science</h1>
-    <p>BLAH BLAH BLAH</p>
+    <p><a href=https://github.com>Github</a></p>
     <a href=https://www.cocc.edu/home/student-login.aspx>BlackBoard</a>
     <a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch</a>
     <a href=https://btetz40.github.io/hlep/index.html>Help</a>
