--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@ layout: default
 title: Computer Science
 ---
 <div class="blurb">
-    <h1> Computer Science</h1>
+    <h1>Computer Science</h1>
+    <h3> Links</h3>
     <p><a href=https://github.com>Github</a></p>
+    <h3> Projects</h3>
+    <p>Text goes here</p>
     <a href=https://www.cocc.edu/home/student-login.aspx>BlackBoard</a>
     <a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch</a>
     <a href=https://btetz40.github.io/hlep/index.html>Help</a>
