--- a/CIS160Scratch/index.html
+++ b/CIS160Scratch/index.html
@@ -4,7 +4,8 @@ title:  Scratch
 ---
 <div class="blurb">
     <h1>Scratch</h1>
-    <p><a href=https://scratch.mit.edu>Scratch</a></p>
+    <h3> Links</h3>
+    <p><a href=https://github.com>Github</a></p>
     <p> Progect 1)</p>
     <a href=https://www.cocc.edu/home/student-login.aspx>BlackBoard</a>
     <a href=https://btetz40.github.io/hlep/index.html>Help</a>
