--- a/hlep/index.html
+++ b/hlep/index.html
@@ -4,7 +4,9 @@ title: Help & Resources
 ---
 <div class="blurb">
     <h1>Help & Resources</h1>
-    <p>P1)<a href=https://docs.google.com/document/d/1wxJ4K9qYcGUCYL4PW7I3raZ8PVsjAHtgjbaeNWZA-mY/edit>Work Schedule</a></p>
+    <h3> Links</h3>
+    <p><a href=https://docs.google.com/document/d/1wxJ4K9qYcGUCYL4PW7I3raZ8PVsjAHtgjbaeNWZA-mY/edit>Work Schedule</a></a></p>
+    <p></p>
     <a href=https://www.cocc.edu/home/student-login.aspx>BlackBoard</a>
     <a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch</a>
     <a href=https://btetz40.github.io/index.html>Home</a>
