--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@ title: Computer Science
     <h3> Projects</h3>
     <p>Text goes here</p>
     
-    <a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch</a>
-    <a href=https://btetz40.github.io/hlep/index.html>Help</a>
+    <a href=https://btetz40.github.io/CIS160Scratch/index.html><small>Scratch</small></a>
+    <a href=https://btetz40.github.io/hlep/index.html><small>Help</small></a>
 </div><!-- /.blurb -->
