--- a/hlep/index.html
+++ b/hlep/index.html
@@ -8,6 +8,6 @@ title: Help & Resources
     <p><a href=https://docs.google.com/document/d/1wxJ4K9qYcGUCYL4PW7I3raZ8PVsjAHtgjbaeNWZA-mY/edit>Work Schedule</a></a></p>
     
     <p><a href=https://www.cocc.edu/home/student-login.aspx>BlackBoard</a></p>
-    <p><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch</a></p>p>
+    <p><a href=https://scratch.mit.edu>Scratch</a></p>p>
     <p><a href=https://btetz40.github.io/index.html>Home</a></p>p>
 </div><!-- /.blurb -->
