--- a/hlep/index.html
+++ b/hlep/index.html
@@ -9,5 +9,5 @@ title: Help & Resources
     
     <p><a href=https://www.cocc.edu/home/student-login.aspx>BlackBoard</a></p>
     <p><a href=https://scratch.mit.edu>Scratch</a></p>
-    <p><a href=https://btetz40.github.io/index.html>Home</a></p>p>
+    <p><a href=https://btetz40.github.io/index.html>Home</a></p>
 </div><!-- /.blurb -->
