--- a/hlep/index.html
+++ b/hlep/index.html
@@ -6,7 +6,7 @@ title: Help & Resources
     <h1>Help & Resources</h1>
     <h3> Links</h3>
     <p><a href=https://docs.google.com/document/d/1wxJ4K9qYcGUCYL4PW7I3raZ8PVsjAHtgjbaeNWZA-mY/edit>Work Schedule</a></a></p>
-    <p><a href=https://www.cocc.edu/home/student-login.aspx>BlackBoard</a></p>
+    <p><a href=https://bb.cocc.edu/webapps/login/>BlackBoard</a></p>
     <p><a href=https://scratch.mit.edu>Scratch</a></p>
     <p><a href=https://btetz40.github.io/index.html>Home</a></p>
 </div><!-- /.blurb -->
