Changed some links
Better navigation

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Computer Science
 <div class="blurb">
     <h1>Computer Science</h1>
     <h3> Links</h3>
-    <p><a href=https://github.com>Github</a></p>
+    <p><a href=https://github.com>Github</a></p> <a href=https://scratch.mit.edu>Scratch</a></p>
     <h3> Projects</h3>
     <p>Text goes here</p>
     
