--- a/CIS160Scratch/index.html
+++ b/CIS160Scratch/index.html
@@ -5,8 +5,8 @@ title:  Scratch
 <div class="blurb">
     <h1>Scratch</h1>
     <h3> Links</h3>
-    <p><a href=https://github.com>Github</a></p>
-    <p> Progect 1)</p>
+    <p><a href=https://scratch.mit.edu>Scratch</a></p>
+    <p> Progects</p>
     <a href=https://www.cocc.edu/home/student-login.aspx>BlackBoard</a>
     <a href=https://btetz40.github.io/hlep/index.html>Help</a>
     <a href=https://btetz40.github.io/index.html>Home</a>
