--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ title: Computer Science
     <h1>Computer Science</h1>
     <h3> Links</h3>
     <p><a href=https://github.com>Github</a>
-        <a href=https://scratch.mit.edu>Scratch</a></p>
+        <a href=https://scratch.mit.edu>Scratch</a>
+        <a href=https://bb.cocc.edu/webapps/login>BlackBoard</a></p>
     <h3> Projects</h3>
     <p>Text goes here</p>
     
