--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@ title: Computer Science
 <div class="blurb">
     <h1>Computer Science</h1>
     <h3> Links</h3>
-    <p><a href=https://github.com>Github</a>
-        <a href=https://scratch.mit.edu>Scratch</a>
-        <a href=https://bb.cocc.edu/webapps/login>BlackBoard</a></p>
+    <ul>
+        <li><p><a href=https://github.com>Github</a></li>
+        <li><a href=https://scratch.mit.edu>Scratch</a></li>
+        <li><a href=https://bb.cocc.edu/webapps/login>BlackBoard</a></p></li>
+        </ul>
     <h3> Projects</h3>
     <p>Text goes here</p>
     
