--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ title: Computer Science
     <h1>Computer Science</h1>
     <h3> Links</h3>
     <ul>
-        <li><p><a href=https://github.com>Github</a></li>
+        <li><a href=https://github.com>Github</a></li>
         <li><a href=https://scratch.mit.edu>Scratch</a></li>
-        <li><a href=https://bb.cocc.edu/webapps/login>BlackBoard</a></p></li>
+        <li><a href=https://bb.cocc.edu/webapps/login>BlackBoard</a></li>
         </ul>
     <h3> Projects</h3>
     <p>Text goes here</p>
