Trying to uplad a pic

--- a/CIS160Scratch/index.html
+++ b/CIS160Scratch/index.html
@@ -4,10 +4,11 @@ title:  Scratch
 ---
 <div class="blurb">
     <h1>Scratch</h1>
-    <h3> Links</h3>
-    <p><a href=https://scratch.mit.edu>Scratch</a></p>
-    <p> Progects</p>
-    <a href=https://www.cocc.edu/home/student-login.aspx>BlackBoard</a>
-    <a href=https://btetz40.github.io/hlep/index.html>Help</a>
-    <a href=https://btetz40.github.io/index.html>Home</a>
+<img "https://btetz40.github.io/layout/Pic1.jpg">
+      <h3> Links</h3>
+         <p><a href=https://scratch.mit.edu>Scratch</a></p>
+         <p> Progects</p>
+    <a href=https://www.cocc.edu/home/student-login.aspx><small>BlackBoard</small></a>
+    <a href=https://btetz40.github.io/hlep/index.html><small>Help</small></a>
+    <a href=https://btetz40.github.io/index.html><small>Home</small></a>
 </div><!-- /.blurb -->
