Fixed file path

--- a/CIS160Scratch/index.html
+++ b/CIS160Scratch/index.html
@@ -4,7 +4,7 @@ title:  Scratch
 ---
 <div class="blurb">
     <h1>Scratch</h1>
-<img "https://btetz40.github.io/layout/Pic1.jpg">
+<img "https://btetz40.github.io/layouts/Pic1.jpg">
       <h3> Links</h3>
          <p><a href=https://scratch.mit.edu>Scratch</a></p>
          <p> Progects</p>
