--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@ title: Computer Science
     <h3>Projects</h3>
     <p></p>
     
-    <a href=https://btetz40.github.io/CIS160Scratch/index.html><small>Scratch</small></a>
+    <a href=https://btetz40.github.io/CIS160Scratch/index.html><small>Scratch Programs</small></a>
     <a href=https://btetz40.github.io/hlep/index.html><small>Help</small></a>
 </div><!-- /.blurb -->
