Border and color

--- a/CIS160Scratch/index.html
+++ b/CIS160Scratch/index.html
@@ -4,7 +4,7 @@ title:  Scratch
 ---
 <div class="blurb">
     <h1>Scratch</h1>
-<img src="https://btetz40.github.io/layouts/Pic1.jpg">
+<img style="border-style: inset;border-color:rgb(209, 32, 32)"  src="https://btetz40.github.io/layouts/Pic1.jpg" height="75" width="75">
       <h3> Links</h3>
          <p><a href=https://scratch.mit.edu>Scratch</a></p>
          <p> Progects</p>
