Tried to change color for background

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Computer Science
 ---
-<div class="blurb">
+<div class="blurb" syle=background-color:: rgba(0, 255, 0, 0.3);}>
     <h1>Computer Science</h1>
     <h3> Links</h3>
     <ul>
