--- a/index.html
+++ b/index.html
@@ -14,5 +14,5 @@ title: Computer Science
     <p></p>
     
     <a href=https://btetz40.github.io/CIS160Scratch/index.html><small>Scratch Programs</small></a>
-    <a href=https://btetz40.github.io/hlep/index.html><small>Help</small></a>
+    <a href=/hlep/index.html><small>Help</small></a>
 </div><!-- /.blurb -->
