--- a/CIS160Scratch/index.html
+++ b/CIS160Scratch/index.html
@@ -11,5 +11,5 @@ title:  Scratch
          <p> Progects</p>
     <a href=https://www.cocc.edu/home/student-login.aspx><small>BlackBoard</small></a>
     <a href=https://btetz40.github.io/hlep/index.html><small>Help</small></a>
-    <a href=https://btetz40.github.io/index.html><small>Home</small></a>
+    <a href=../index.html><small>Home</small></a>
 </div><!-- /.blurb -->
