--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@ title: Computer Science
         <li><a href=https://github.com>Github</a></li>
         <li><a href=https://scratch.mit.edu>Scratch</a></li>
         <li><a href=https://bb.cocc.edu/webapps/login>BlackBoard</a></li>
+        <li><a href=../hlep/index.html><small>Help</small></a></li>
         </ul>
     <h3>Projects</h3>
     <p></p>
     
     <a href=https://btetz40.github.io/CIS160Scratch/index.html><small>Scratch Programs</small></a>
-    <a href=/hlep/index.html><small>Help</small></a>
 </div><!-- /.blurb -->
