--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 title: Computer Science
 ---
 <div class="blurb">
+        <link rel="stylesheet" type="text/css" href="../btetz40.github.io/css/main.css">
     <h1>Computer Science</h1>
     <h3> Links</h3>
     <ul>
@@ -10,7 +11,7 @@ title: Computer Science
         <li><a href=https://scratch.mit.edu>Scratch</a></li>
         <li><a href=https://bb.cocc.edu/webapps/login>BlackBoard</a></li>
         <li><a href=../hlep/index.html><small>Help</small></a></li>
-        </ul>
+    </ul>
     <h3>Projects</h3>
     <p></p>
     
