--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Computer Science
         <li><a href=../hlep/index.html><small>Help</small></a></li>
     </ul>
     <h3>Projects</h3>
-    <p></p>
+    <p>Textxtx</p>
     
     <a href=https://btetz40.github.io/CIS160Scratch/index.html><small>Scratch Programs</small></a>
 </div><!-- /.blurb -->
