--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@ title: Computer Science
 ---
 <div class="blurb">
         <link rel="stylesheet" type="text/css" href="../btetz40.github.io/css/main.css">
-    <h1>Computer Science</h1>
-    <h3> Links</h3>
-    <ul>
-        <li><a href=https://github.com>Github</a></li>
-        <li><a href=https://scratch.mit.edu>Scratch</a></li>
-        <li><a href=https://bb.cocc.edu/webapps/login>BlackBoard</a></li>
-        <li><a href=../hlep/index.html><small>Help</small></a></li>
-    </ul>
-    <h3>Projects</h3>
-    <p>Textxtx</p>
-    
-    <a href=https://btetz40.github.io/CIS160Scratch/index.html><small>Scratch Programs</small></a>
+        <h1>Computer Science</h1>
+        <h3> Links</h3>
+        <ul>
+            <li><a href=https://github.com>Github </a> </li> <li><a href=https://scratch.mit.edu>Scratch </a> </li> <li><a
+                            href=https://bb.cocc.edu/webapps/login>BlackBoard </a> </li> <li><a href=../hlep/index.html>
+                                <small>Help</small></a></li>
+        </ul>
+        <h3>Projects</h3>
+        <p>Textxtx</p>
+
+        <a href=https://btetz40.github.io/CIS160Scratch/index.html> <small>Scratch Programs</small></a>
 </div><!-- /.blurb -->
