--- a/CIS160Scratch/index.html
+++ b/CIS160Scratch/index.html
@@ -2,7 +2,7 @@
 <div class="blurb">
     <h1>Scratch</h1>
       <h3> Links</h3>
-      <link rel="stylesheet" type="text/css" href="../btetz40.github.io/css/main.css">
+      <link rel="stylesheet" type="text/css" href="../css/main.css">
          <p><a href=https://scratch.mit.edu>Scratch</a></p>
          <p> Progects</p>
     <a href=https://www.cocc.edu/home/student-login.aspx><small>BlackBoard</small></a>
