--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
     <h3>Projects</h3>
     <p>Textxtx</p>
 
-    <a href=https://btetz40.github.io/CIS160Scratch/index.html> <small>Scratch Programs</small></a>
+    <a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a>
 </div><!-- /.blurb -->
