--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <div class="blurb">
     <link rel="stylesheet" type="text/css" href="../btetz40.github.io/css/main.css">
     <h1>Computer Science</h1>
+<div id="grad">background-image: linear-gradient(red, yellow)</div>
     <h3> Links</h3>
     <ul>
         <li><a href=https://github.com>Github </a> </li> <li><a href=https://scratch.mit.edu>Scratch </a> </li> <li><a
