--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <div class="blurb">
+    <div>
+        {width: 125px
+        height: 70px
+        margin: 100px;
+        background:linear-gradient(yellow, red)}
+    </div>
     <link rel="stylesheet" type="text/css" href="../btetz40.github.io/css/main.css">
     <h1>Computer Science</h1>
     <div class="background-image"></div>
