--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<div class="blurb">4
+<div id="box1">
     <link rel="stylesheet" type="text/css" href="../btetz40.github.io/css/main.css">
     <h1>Computer Science</h1>
     <div class="background-image"></div>
     <h3> Links</h3>
-    <div></div>
+   
     <ul>
         <li><a href=https://github.com>Github </a> </li> <li><a href=https://scratch.mit.edu>Scratch </a> </li> <li><a
                         href=https://bb.cocc.edu/webapps/login>BlackBoard </a> </li> <li><a href=../hlep/index.html>
