--- a/index.html
+++ b/index.html
@@ -13,4 +13,4 @@
     <p>Textxtx</p>
 
     <a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a>
-</div><!-- /.blurb -->
+</div>
