--- a/CIS160Scratch/index.html
+++ b/CIS160Scratch/index.html
@@ -1,8 +1,11 @@
-<div class="blurb">
+<div class="box1">
     <h1>Scratch</h1>
     <h3> Links</h3>
     <link rel="stylesheet" type="text/css" href="../css/main.css">
-    <p><a href=https://scratch.mit.edu>Scratch </a> </p> <p> Progects</p>
+    <p><a href=https://scratch.mit.edu>Scratch </a> </p>
+ <p> Progects</p>
+ <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/250282013/?autostart=false" frameborder="0" allowfullscreen></iframe>
+    
     <a href=https://www.cocc.edu/home/student-login.aspx> <small>BlackBoard</small></a>
     <a href=https://btetz40.github.io/hlep/index.html> <small>Help</small></a>
     <a href=../index.html> <small>Home</small></a>
