--- a/CIS160Scratch/index.html
+++ b/CIS160Scratch/index.html
@@ -9,4 +9,4 @@
     <a href=https://www.cocc.edu/home/student-login.aspx> <small>BlackBoard</small></a>
     <a href=https://btetz40.github.io/hlep/index.html> <small>Help</small></a>
     <a href=../index.html> <small>Home</small></a>
-</div><!-- /.blurb -->
+</div>
