--- a/CIS160Scratch/index.html
+++ b/CIS160Scratch/index.html
@@ -1,4 +1,4 @@
-<div class="box1">
+<div id="box1">
     <h1>Scratch</h1>
     <h3> Links</h3>
     <link rel="stylesheet" type="text/css" href="../css/main.css">
