--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <div id="box1">
     <link rel="stylesheet" type="text/css" href="../btetz40.github.io/css/main.css">
     <h1>Computer Science</h1>
-    <div class="background-image"></div>
     <h3> Links</h3>
-   
     <ul>
-        <li><a href=https://github.com>Github </a> </li> <li><a href=https://scratch.mit.edu>Scratch </a> </li> <li><a
-                        href=https://bb.cocc.edu/webapps/login>BlackBoard </a> </li> <li><a href=../hlep/index.html>
-                            <small>Help</small></a></li>
+        <li><a href=https://github.com>Github </a> </li> 
+        <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
+        <li><a href=https://bb.cocc.edu/webapps/login>BlackBoard </a> </li> 
+        <li><a href=../hlep/index.html>Help</a></li>
     </ul>
     <h3>Projects</h3>
     <p>Textxtx</p>
-
-    <a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a>
-</div>
-<div id="box1">
-
-</div>
+    <footer 
+    <a href=https://scratch.mit.edu>Scratch </a>
+    </footer>
+</div id="box1">
