--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </ul>
     <h3>Projects</h3>
     <p>Textxtx</p>
-    <footer 
+    <footer>
     <a href=https://scratch.mit.edu>Scratch </a>
     </footer>
 </div id="box1">
