--- a/CIS160Scratch/index.html
+++ b/CIS160Scratch/index.html
@@ -6,8 +6,10 @@
  <p> Progects</p>
  <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/250282013/?autostart=false" frameborder="0" allowfullscreen></iframe>
     
-    <a href=https://www.cocc.edu/home/student-login.aspx>BlackBoard</a>
-    <a href=https://btetz40.github.io/hlep/index.html>Help</a>
-    <a href=../index.html>Home</a>
+    <ul>
+   <li> <a href=https://www.cocc.edu/home/student-login.aspx>BlackBoard</a></li>
+   <li> <a href=https://btetz40.github.io/hlep/index.html>Help</a></li>
+   <li> <a href=../index.html>Home</a></li>
+    </ul>
 </div>
 
