--- a/hlep/index.html
+++ b/hlep/index.html
@@ -2,6 +2,11 @@
     <h1>Help & Resources</h1>
     <h3> Links</h3>
     <link rel="stylesheet" type="text/css" href="../css/main.css">
-    <p><a href=https://docs.google.com/document/d/1wxJ4K9qYcGUCYL4PW7I3raZ8PVsjAHtgjbaeNWZA-mY/edit>Work Schedule</a> </a>
-            </p> <p><a href=https://bb.cocc.edu/webapps/login>BlackBoard </a> </p> <p><a href=https://scratch.mit.edu>Scratch
-                    </a> </p> <p><a href=https://btetz40.github.io/index.html>Home </a> </p> </div>
+    
+    <ul>
+    <li><a href=https://docs.google.com/document/d/1wxJ4K9qYcGUCYL4PW7I3raZ8PVsjAHtgjbaeNWZA-mY/edit>Work Schedule</a></p></li>
+    <li><a href=https://bb.cocc.edu/webapps/login>BlackBoard </a></li>
+    <li><a href=https://scratch.mit.edu>Scratch </a></li>
+    <li><a href=https://btetz40.github.io/index.html>Home </a></li>
+    </ul>
+</div>
