Top and bottom nav bars

--- a/hlep/index.html
+++ b/hlep/index.html
@@ -8,4 +8,10 @@
     <li><a href=https://btetz40.github.io/index.html>Home </a></li>
     </ul>
     <link rel="stylesheet" type="text/css" href="../css/main.css">
+    <ul>
+                <li><a href=https://docs.google.com/document/d/1wxJ4K9qYcGUCYL4PW7I3raZ8PVsjAHtgjbaeNWZA-mY/edit>Work Schedule</a></p></li>
+                <li><a href=https://bb.cocc.edu/webapps/login>BlackBoard </a></li>
+                <li><a href=https://scratch.mit.edu>Scratch </a></li>
+                <li><a href=https://btetz40.github.io/index.html>Home </a></li>
+                </ul>
 </div>
