--- a/CIS160Scratch/index.html
+++ b/CIS160Scratch/index.html
@@ -11,5 +11,10 @@
    <li> <a href=https://btetz40.github.io/hlep/index.html>Help</a></li>
    <li> <a href=../index.html>Home</a></li>
     </ul>
+    <ul>
+            <li> <a href=https://www.cocc.edu/home/student-login.aspx>BlackBoard</a></li>
+            <li> <a href=https://btetz40.github.io/hlep/index.html>Help</a></li>
+            <li> <a href=../index.html>Home</a></li>
+             </ul>
 </div>
 
