--- a/CIS160Scratch/index.html
+++ b/CIS160Scratch/index.html
@@ -8,7 +8,7 @@
             <li> <a href=https://btetz40.github.io/hlep/index.html>Help</a></li>
             <li> <a href=../index.html>Home</a></li>
              </ul>
- <p> Progects</p>
+ <p text-align: center;> Progects</p>
  <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/250282013/?autostart=false" frameborder="0" allowfullscreen></iframe>
     
     
