--- a/CIS160Scratch/index.html
+++ b/CIS160Scratch/index.html
@@ -2,7 +2,6 @@
     <h1>Scratch</h1>
     <h3> Links</h3>
     <link rel="stylesheet" type="text/css" href="../css/main.css">
-    <p><a href=https://scratch.mit.edu>Scratch </a> </p>
     <ul>
             <li> <a href=https://www.cocc.edu/home/student-login.aspx>BlackBoard</a></li>
             <li> <a href=https://btetz40.github.io/hlep/index.html>Help</a></li>
@@ -11,6 +10,7 @@
  <h3>Projects</h3>
  <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/250282013/?autostart=false" frameborder="0" allowfullscreen></iframe>
     <ul>
+            <li><a href=https://scratch.mit.edu>Scratch </a></li>
             <li> <a href=https://www.cocc.edu/home/student-login.aspx>BlackBoard</a></li>
             <li> <a href=https://btetz40.github.io/hlep/index.html>Help</a></li>
             <li> <a href=../index.html>Home</a></li>
