--- a/CIS160Scratch/index.html
+++ b/CIS160Scratch/index.html
@@ -2,7 +2,8 @@
     <h1>Scratch</h1>
     <h3> Links</h3>
     <link rel="stylesheet" type="text/css" href="../css/main.css">
-    <ul>
+    <ul>           
+         <li><a href=https://scratch.mit.edu>Scratch </a></li>
             <li> <a href=https://www.cocc.edu/home/student-login.aspx>BlackBoard</a></li>
             <li> <a href=https://btetz40.github.io/hlep/index.html>Help</a></li>
             <li> <a href=../index.html>Home</a></li>
