--- a/hlep/index.html
+++ b/hlep/index.html
@@ -1,18 +1,24 @@
 <div id="box1">
+                <link rel="stylesheet" type="text/css" href="../css/main.css">
     <h1>Help & Resources</h1>
     <h3> Links</h3>    
     <ul>
-    <li><a href=https://docs.google.com/document/d/1wxJ4K9qYcGUCYL4PW7I3raZ8PVsjAHtgjbaeNWZA-mY/edit>Work Schedule</a></p></li>
-    <li><a href=https://bb.cocc.edu/webapps/login>BlackBoard </a></li>
-    <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
-    <li><a href=https://scratch.mit.edu>Scratch </a></li>
-    <li><a href=https://btetz40.github.io/index.html>Home </a></li>
-    </ul>
-    <link rel="stylesheet" type="text/css" href="../css/main.css">
-    <ul>
+                <li><a href=https://btetz40.github.io/index.html>Home </a></li>
+                <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
                 <li><a href=https://docs.google.com/document/d/1wxJ4K9qYcGUCYL4PW7I3raZ8PVsjAHtgjbaeNWZA-mY/edit>Work Schedule</a></p></li>
                 <li><a href=https://bb.cocc.edu/webapps/login>BlackBoard </a></li>
                 <li><a href=https://scratch.mit.edu>Scratch </a></li>
+                <li><a href=https://github.com>Github </a> </li> 
+                </ul>
+    
+
+
+    <ul>
                 <li><a href=https://btetz40.github.io/index.html>Home </a></li>
+                <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
+                <li><a href=https://docs.google.com/document/d/1wxJ4K9qYcGUCYL4PW7I3raZ8PVsjAHtgjbaeNWZA-mY/edit>Work Schedule</a></p></li>
+                <li><a href=https://bb.cocc.edu/webapps/login>BlackBoard </a></li>
+                <li><a href=https://scratch.mit.edu>Scratch </a></li>
+                <li><a href=https://github.com>Github </a> </li> 
                 </ul>
 </div>
