--- a/hlep/index.html
+++ b/hlep/index.html
@@ -11,6 +11,7 @@
                 <li><a href=https://github.com>Github </a> </li> 
                 </ul>
     
+                <p>This is what my website is going to help you with. blah  blah.</p>
 
 
     <ul>
