--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <div id="box1">
-    <link rel="stylesheet" type="text/css" href="../btetz40.github.io/css/main.css">
-    <h1>Computer Science</h1>
+        <link rel="stylesheet" type="text/css" href="../css/main.css">
     <h3> Links</h3>
     <ul>
         <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
