--- a/hlep/index.html
+++ b/hlep/index.html
@@ -10,12 +10,11 @@
                 <li><a href=https://scratch.mit.edu>Scratch </a></li>
                 <li><a href=https://github.com>Github </a> </li> 
                 </ul>
-    
-                <p><a href=https://www.cocc.edu/home/student-login.aspx>BlackBoard</a></p>
-                <p><a href=https://github.com>Github </a></p>
-                <p><a href=https://scratch.mit.edu>Scratch </a></p>
-                <p><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></p>
-                <a href=https://docs.google.com/document/d/1wxJ4K9qYcGUCYL4PW7I3raZ8PVsjAHtgjbaeNWZA-mY/edit>Work Schedule</a></p>
+        <h3 style= color:black><a href=https://www.cocc.edu/home/student-login.aspx>BlackBoard</a></h3>
+        <h3 style= color:black><a href=https://github.com>Github </a></h3>
+        <h3 style= color:black><a href=https://scratch.mit.edu>Scratch </a></h3>
+        <h3 style= color:black><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></h3>
+        <h3 style= color:black><a href=https://docs.google.com/document/d/1wxJ4K9qYcGUCYL4PW7I3raZ8PVsjAHtgjbaeNWZA-mY/edit>Work Schedule</a></h3>
 
 
 
