--- a/hlep/index.html
+++ b/hlep/index.html
@@ -10,11 +10,12 @@
                 <li><a href=https://scratch.mit.edu>Scratch </a></li>
                 <li><a href=https://github.com>Github </a> </li> 
                 </ul>
-        <h3 style= color:black><a href=https://www.cocc.edu/home/student-login.aspx>BlackBoard</a></h3>
-        <h3 style= color:black><a href=https://github.com>Github </a></h3>
-        <h3 style= color:black><a href=https://scratch.mit.edu>Scratch </a></h3>
-        <h3 style= color:black><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></h3>
-        <h3 style= color:black><a href=https://docs.google.com/document/d/1wxJ4K9qYcGUCYL4PW7I3raZ8PVsjAHtgjbaeNWZA-mY/edit>Work Schedule</a></h3>
+        <h2><a style= color:black href=https://www.cocc.edu/home/student-login.aspx>BlackBoard</a></h2>
+        <h2><a style= color:black href=https://github.com>Github </a></h2>
+        <h2><a style= color:black href=</h2>
+        <h2><a style= color:black href=https://scratch.mit.edu>Scratch </a></h2>
+        <h2><a style= color:black href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></h2>
+        <h2><a style= color:black href=https://docs.google.com/document/d/1wxJ4K9qYcGUCYL4PW7I3raZ8PVsjAHtgjbaeNWZA-mY/edit>Work Schedule</a></h2>
 
 
 
