--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <h1>Computer Science Home</h1>
     <h3> Links</h3>
     <ul>
-        <li><a href=//btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
+        <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
         <li><a href=https://bb.cocc.edu/webapps/login>BlackBoard </a> </li> 
         <li><a href=https://github.com>Github </a> </li> 
         <li><a href=https://scratch.mit.edu>Scratch </a></li>
