--- a/Collegeinfo/index.html
+++ b/Collegeinfo/index.html
@@ -10,8 +10,8 @@
         <li><a href=../hlep/index.html>Help</a></li>  
     </ul>
     <h2>Portland State</h2>
-    <a href=https://www.pdx.edu/academic-programs></a>
-    <img src="psu.png"alt="Collegeinfo">
+    <a href=https://www.pdx.edu/academic-programs>
+    <img src="psu.png"alt="Collegeinfo"></a>
     <p>Different options are available through Portland State for gradutate programs such as; online programs, undergrad, and full graduate options.</p>
     <h2>University of Oregon</h2>
 
