--- a/Collegeinfo/index.html
+++ b/Collegeinfo/index.html
@@ -11,7 +11,7 @@
     </ul>
     <h2>Portland State</h2>
     <a href=https://www.pdx.edu/academic-programs>
-    <img src="psu.png"alt="Collegeinfo"></a>
+    <img src="psu.png"alt="Collegeinfo" style="width:75px;height:75px;border:0;"></a>
     <p>Different options are available through Portland State for gradutate programs such as; online programs, undergrad, and full graduate options.</p>
     <h2>University of Oregon</h2>
 
