--- a/CIS160Scratch/index.html
+++ b/CIS160Scratch/index.html
@@ -3,8 +3,7 @@
     <link rel="stylesheet" type="text/css" href="../css/main.css">
  <ul>           
          <li> <a href=../index.html>Home</a></li>
-         <li><a href=https://scratch.mit.edu>Scratch </a></li>
-         <li> <a href=https://www.cocc.edu/home/student-login.aspx>BlackBoard</a></li>
+         <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
          <li> <a href=https://btetz40.github.io/hlep/index.html>Help</a></li>
     </ul>
  <h3>Projects</h3>
@@ -15,8 +14,7 @@
 
      
         <li> <a href=../index.html>Home</a></li>
-        <li><a href=https://scratch.mit.edu>Scratch </a></li>
-        <li> <a href=https://www.cocc.edu/home/student-login.aspx>BlackBoard</a></li>
+        <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
         <li> <a href=https://btetz40.github.io/hlep/index.html>Help</a></li>
  </ul>
 </div>
