--- a/Collegeinfo/index.html
+++ b/Collegeinfo/index.html
@@ -2,26 +2,27 @@
         <link rel="stylesheet" type="text/css" href="../css/main.css">
         <h1>Computer Science Degree Options</h1>
     <h3> Links</h3>
-    <ul>
+    <ul>               
+        <li><a href=https://btetz40.github.io/index.html>Home </a></li>
         <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
-        <li><a href=https://bb.cocc.edu/webapps/login>BlackBoard </a> </li> 
-        <li><a href=https://github.com>Github </a> </li> 
-        <li><a href=https://scratch.mit.edu>Scratch </a></li>
         <li><a href=../hlep/index.html>Help</a></li>  
     </ul>
     <h2>Portland State</h2>
     <a href=https://www.pdx.edu/academic-programs>
     <img src="psu.png"alt="Collegeinfo" style="width:75px;height:75px;border:0;"></a>
-    <p>Different options are available through Portland State for gradutate programs such as; online programs, undergrad, and full graduate options.</p>
+    <p>Different options are available through Portland State for gradutate programs such as; online programs, undergrad, and full graduate options. The picture will take you to those options.</p>
     <h2>University of Oregon</h2>
+    <a href=https://cs.uoregon.edu/graduate-education>
+    <img src="afro.jpg" alt="Collegeinfo" style="width:75px;height:75px; border:0;"></a>
+    <p>Similar types of degrees with more versatility and more pathways to individualise your education. This link will take you to those options.</p>
+</a>
+<ul>               
+        <li><a href=https://btetz40.github.io/index.html>Home </a></li>
+        <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
+        <li><a href=../hlep/index.html>Help</a></li>  
+    </ul>
 
     
-    <ul>
-            <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
-            <li><a href=https://bb.cocc.edu/webapps/login>BlackBoard </a> </li> 
-            <li><a href=https://github.com>Github </a> </li> 
-            <li><a href=https://scratch.mit.edu>Scratch </a></li>
-            <li><a href=../hlep/index.html>Help</a></li>
-    </ul>
+    
 
 </div id="box1">
