--- a/hlep/index.html
+++ b/hlep/index.html
@@ -4,7 +4,7 @@
     <h3> Links</h3>    
     <ul>
                 <li><a href=https://btetz40.github.io/index.html>Home </a></li>
-                <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
+                <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
                 <li><a href=https://docs.google.com/document/d/1wxJ4K9qYcGUCYL4PW7I3raZ8PVsjAHtgjbaeNWZA-mY/edit>Work Schedule</a></p></li>
                 <li><a href=https://bb.cocc.edu/webapps/login>BlackBoard </a></li>
                 <li><a href=https://scratch.mit.edu>Scratch </a></li>
@@ -25,7 +25,7 @@
                 <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
                 <li><a href=https://docs.google.com/document/d/1wxJ4K9qYcGUCYL4PW7I3raZ8PVsjAHtgjbaeNWZA-mY/edit>Work Schedule</a></p></li>
                 <li><a href=https://bb.cocc.edu/webapps/login>BlackBoard </a></li>
-                <li><a href=https://scratch.mit.edu>Scratch </a></li>
+                <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
                 <li><a href=https://github.com>Github </a> </li> 
                 </ul>
 </div>
