--- a/CIS160Scratch/index.html
+++ b/CIS160Scratch/index.html
@@ -8,10 +8,10 @@
     </ul>
  <h3>Projects</h3>
  <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/250282013/?autostart=false" frameborder="0" allowfullscreen>
-</iframe><a href=https://scratch.mit.edu/projects/250282013>Friction Marble</a>
+</iframe><p><a href=https://scratch.mit.edu/projects/250282013>Friction Marble</a></p>
 
  <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/251181130/?autostart=false" frameborder="0" allowfullscreen>
-</iframe><a href=https://scratch.mit.edu/projects/251181130>Rectangle traverse</a>
+</iframe><p><a href=https://scratch.mit.edu/projects/251181130>Rectangle traverse</a></p>
     
  <ul>
 
