Added link to reading questons

--- a/hlep/index.html
+++ b/hlep/index.html
@@ -12,7 +12,7 @@
                 </ul>
         <h2><a style= color:black href=https://www.cocc.edu/home/student-login.aspx>BlackBoard</a></h2>
         <h2><a style= color:black href=https://github.com>Github </a></h2>
-        <h2><a style= color:black href=</h2>
+        <h2><a style= color:black href=../qdocs/qdocs.htm>Reading questions</a></h2>
         <h2><a style= color:black href=https://scratch.mit.edu>Scratch </a></h2>
         <h2><a style= color:black href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></h2>
         <h2><a style= color:black href=https://docs.google.com/document/d/1wxJ4K9qYcGUCYL4PW7I3raZ8PVsjAHtgjbaeNWZA-mY/edit>Work Schedule</a></h2>
