Added new scratch game
Sharks

--- a/CIS160Scratch/index.html
+++ b/CIS160Scratch/index.html
@@ -12,6 +12,9 @@
 
  <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/251181130/?autostart=false" frameborder="0" allowfullscreen>
 </iframe><p><a href=https://scratch.mit.edu/projects/251181130>Rectangle traverse</a></p>
+<iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/255704135/?autostart=false" frameborder="0" allowfullscreen>
+</iframe><p><a href=https://scratch.mit.edu/projects/255704135>Sharks!</a></p>
+    
     
  <ul>
 
