--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 
     </ul>
     <h3>Portfolio</h3>
-    <p>Scratch assignments</p>
+    <p></p><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></p>
     <p>Dreaming in Code Questions</p>
     <p>Code Questions</p>
     <p>App Inventor projects</p>
+    <p>Sketches</p>
     <ul>       
         <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
        <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
