--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
     <ul>
         <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
         <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
+        <li><a href=../qdocs./qdocs.html>Reading questions</a></li>
+        <li><a href=youtube link></a></li>
         <li><a href=../hlep/index.html>Help</a></li>
 
     </ul>
     <h3>Portfolio</h3>
     <p></p><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></p>
-    <p>Dreaming in Code Questions</p>
-    <p>Code Questions</p>
+   <p>Reading Questions</p>
     <p>App Inventor projects</p>
-    <a href=https://btetz40.github.io/sketckes/empty-example/index.html>Sketch</a>
+    <a href=https://btetz40.github.io/sketckes/index.html>Sketch</a>
     <ul>       
         <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
        <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
+       <li><a href=../qdocs./qdocs.html>Reading questions</a></li>
        <li><a href=../hlep/index.html>Help</a></li>
     </ul>
 
