--- a/qdocs/qdocs.html
+++ b/qdocs/qdocs.html
@@ -5,7 +5,7 @@
         <li> <a href=../index.html>Home </a> </li> <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad
                     Programs</a> </li> <li> <a href=https://btetz40.github.io/hlep/index.html>Help </a> </li> <li><a
                             href=../CIS160Scratch.html>Scratch Programs</a> </li> </ul> <p>
-                            <underlined>Google Doc links coming soon!</underlined>
+                            Google Doc links coming soon!
                             </p>
                             <ul>
 
