Added google doc?

--- a/qdocs/qdocs.html
+++ b/qdocs/qdocs.html
@@ -4,9 +4,11 @@
     <ul>
         <li> <a href=../index.html>Home </a> </li> <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad
                     Programs</a> </li> <li> <a href=https://btetz40.github.io/hlep/index.html>Help </a> </li> <li><a
-                            href=../CIS160Scratch.html>Scratch Programs</a> </li> </ul> <p>
+                            href=../CIS160Scratch.html>Scratch Programs</a> </li> </ul> 
+                            <p>
                             Google Doc links coming soon!
                             </p>
+                            <a href=https://docs.google.com/document/d/1xaEhqO-fwYZGeqYz6fuT5dp7dX3rwP51qHCtb_Txba8/edit?usp=sharing>Dreaming in code</a>
                             <ul>
 
 
