--- a/hlep/index.html
+++ b/hlep/index.html
@@ -29,7 +29,7 @@
                 <li><a href=https://bb.cocc.edu/webapps/login>BlackBoard </a></li>
                 <li><a href=https://scratch.mit.edu>Scratch </a></li>
                 <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
-                <li><a href=../qdocs./qdocs.html>Reading questions</a></li>
+                <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
                 <li><a href=https://github.com>Github </a> </li> 
                 </ul>
 </div>
