--- a/sketckes/index.html
+++ b/sketckes/index.html
@@ -5,7 +5,7 @@
         <li><a href=https://btetz40.github.io/index.html>Home </a></li>
         <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
         <li><a href=../CIS160Scratch/index.html>Scratch Programs</a></li>
-        <li><a href=../qdocs./qdocs.html>Reading questions</a></li>
+        <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
         <li><a href=../hlep.index.html>Help</a></li>
     </ul>
     <p>First example (example 2.2) using brackets and pj.5</p>
@@ -17,6 +17,6 @@
         <li><a href=https://btetz40.github.io/index.html>Home </a></li>
         <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
         <li><a href=../CIS160Scratch/index.html>Scratch Programs</a></li>
-        <li><a href=../qdocs./qdocs.html>Reading questions</a></li>
+        <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
         <li><a href=../hlep.index.html>Help</a></li>
     </ul>
