--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     </ul>
     <h3>Portfolio</h3>
-    <p></p><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></p>
-   <p>Reading Questions</p>
+    <a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a>
+    <a href=https://docs.google.com/document/d/1xaEhqO-fwYZGeqYz6fuT5dp7dX3rwP51qHCtb_Txba8/edit?usp=sharing>Dreaming in code</a>
     <p>App Inventor projects</p>
     <a href=https://btetz40.github.io/sketckes/index.html>Sketch</a>
     <ul>       
