--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <ul>
         <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
         <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
+        <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
         <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
         <li><a href=youtube link></a></li>
         <li><a href=../hlep/index.html>Help</a></li>
@@ -18,6 +19,7 @@
     <ul>       
         <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
        <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
+       <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
        <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
        <li><a href=../hlep/index.html>Help</a></li>
     </ul>
