--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
     </ul>
     <h3>Portfolio</h3>
-    <a style= color:black href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a>
+    <p><a style= color:black href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></p>
     <p><a style= color:black href=https://docs.google.com/document/d/1xaEhqO-fwYZGeqYz6fuT5dp7dX3rwP51qHCtb_Txba8/edit?usp=sharing>Dreaming in code</a></p>
     <p>App Inventor projects</p>
-    <a style= color:black href=https://btetz40.github.io/sketckes/index.html>Sketch</a>
+    <p><a style= color:black href=https://btetz40.github.io/sketckes/index.html>Sketch</a></p>
     <ul>       
         <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
        <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
