Added python page and links

--- a/sketckes/index.html
+++ b/sketckes/index.html
@@ -20,3 +20,4 @@
         <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
         <li><a href=../hlep.index.html>Help</a></li>
     </ul>
+    </div id="box1">
