--- a/python/index.html
+++ b/python/index.html
@@ -9,6 +9,8 @@
 </ul>
 <p><a style= color:black href=https://repl.it/@btetz/FarUpsetAdmins>Rock Paper Scissors</a></p>
 <p><a style= color:black href=>Master Mind</a></p>
+<iframe height="400px" width="100%" src="https://repl.it/@btetz/VioletAcceptableTrialsoftware?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+
 
 
 
