--- a/CIS160Scratch/index.html
+++ b/CIS160Scratch/index.html
@@ -6,6 +6,7 @@
          <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
          <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
          <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
+         <li><a href=../python/index.html>Python</a></li>
          <li><a href=https://btetz40.github.io/hlep/index.html>Help</a></li>
     </ul>
  <h3>Projects</h3>
