Changed some shit

--- a/python/index.html
+++ b/python/index.html
@@ -7,9 +7,9 @@
     <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
     <li><a href=../hlep.index.html>Help</a></li>
 </ul>
-<p><a style= color:black href=https://repl.it/@btetz/FarUpsetAdmins>Rock Paper Scissors</a></p>
+<p>Rock Paper Scissors</p>
 <script src="https://pastebin.com/embed_js/9wS445CP"></script>
-<p><a style= color:black href=>Master Mind</a></p>
+<p>Master Mind</p>
 <script src="https://pastebin.com/embed_js/htXFkAxT"></script>
 
 
