--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     </ul>
     <h3>Portfolio</h3>
+    <p><a stlye= color:black href=../codehs.html>Code Highschool progress</a></p>
     <p><a style= color:black href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></p>
     <p><a style= color:black href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></p>
     <p><a style= color:black href=https://docs.google.com/document/d/1xaEhqO-fwYZGeqYz6fuT5dp7dX3rwP51qHCtb_Txba8/edit?usp=sharing>Dreaming in code</a></p>
@@ -21,13 +22,16 @@
     <p><a style= color:black href=../python/index.html>Python Programs</a></p>
 
 
-
-    <ul>       
-        <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
-       <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
-       <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
-       <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
-       <li><a href=../hlep/index.html>Help</a></li>
-    </ul>
+    <ul>
+            <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
+            <li><a href=../python/index.html>Python Programs</a></li>
+            <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
+            <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
+            <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
+            <li><a href=../apinvent/index.html>App inventor</a></li>
+            <li><a href=../hlep/index.html>Help</a></li>
+    
+        </ul>
+    
 
 </div id="box1">
