--- a/codehs.html
+++ b/codehs.html
@@ -19,13 +19,14 @@
 
 
 
+<ul>
+        <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
+        <li><a href=../python/index.html>Python Programs</a></li>
+        <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
+        <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
+        <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
+        <li><a href=../apinvent/index.html>App inventor</a></li>
+        <li><a href=../hlep/index.html>Help</a></li>
+</ul>
 
-
-
-    <ul>       
-            <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
-           <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
-           <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
-           <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
-           <li><a href=../hlep/index.html>Help</a></li>
-        </ul>
+</div id="box1">
