--- a/codehs.html
+++ b/codehs.html
@@ -14,7 +14,7 @@
     </ul>
 
 
-<a><img source="../layouts/codehs.png" alt="codehs" style="width: auto; height: auto"></a>
+<a><img source="../layouts/codehs.png" alt="codehs" style="width: fit-content; height: fit-content"></a>
 
 
 
