--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     </ul>
     <h3>Portfolio</h3>
-    <p><a stlye= color:black href=../codehs.html>Code Highschool progress</a></p>
+    <p><a style= color:black href=../codehs.html>Code Highschool</a></p>
     <p><a style= color:black href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></p>
     <p><a style= color:black href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></p>
     <p><a style= color:black href=https://docs.google.com/document/d/1xaEhqO-fwYZGeqYz6fuT5dp7dX3rwP51qHCtb_Txba8/edit?usp=sharing>Dreaming in code</a></p>
