--- a/python/index.html
+++ b/python/index.html
@@ -11,7 +11,7 @@
 </ul>
 <p>Rock Paper Scissors</p>
 <script src="https://pastebin.com/embed_js/9wS445CP"></script>
-<p>Master Mind</p>
+<p>Master Mind Bitches!!</p>
 <script src="https://pastebin.com/embed_js/htXFkAxT"></script>
 
 
