--- a/codehs.html
+++ b/codehs.html
@@ -14,8 +14,7 @@
     </ul>
 
 
-<a><img source="codehs.png" alt="codehs" style="width: 1200px; height: 1000px; border: 10px"></a>
-
+    <img src="2018-12-13.png" alt="Code highschool">
 
 
 
