--- a/python/index.html
+++ b/python/index.html
@@ -10,10 +10,25 @@
     <li><a href=../hlep.index.html>Help</a></li>
 </ul>
 <p>Rock Paper Scissors</p>
-<script src="https://pastebin.com/embed_js/9wS445CP"></script>
-<p>Master Mind Bitches!!</p>
-<script src="https://pastebin.com/embed_js/htXFkAxT"></script>
+<iframe src="https://pastebin.com/embed_iframe/WtSD4Yj0" style="border:none;width:100%"></iframe>
 
+<p>Master Mind</p>
+<iframe src="https://pastebin.com/embed_iframe/vcsFa866" style="border:none;width:100%"></iframe>
+
+<p>Hang Man</p>
+<iframe src="https://pastebin.com/embed_iframe/uJ6x2Lbk" style="border:none;width:100%"></iframe>
+
+<p>Decimal to Base</p>
+<iframe src="https://pastebin.com/embed_iframe/g1Q57nTE" style="border:none;width:100%"></iframe>
+
+<p>Dice</p>
+<iframe src="https://pastebin.com/embed_iframe/cPgMGiGu" style="border:none;width:100%"></iframe>
+
+<p>Gass Millage Calculator</p>
+<iframe src="https://pastebin.com/embed_iframe/jsw5XHqf" style="border:none;width:100%"></iframe>
+
+<p>Loan Processor</p>
+<iframe src="https://pastebin.com/embed_iframe/CtELvXKU" style="border:none;width:100%"></iframe>
 
 
 <ul>
