--- a/qdocs/qdocs.html
+++ b/qdocs/qdocs.html
@@ -13,8 +13,12 @@
         </ul> 
                             
          <a style= color:black href=https://docs.google.com/document/d/1xaEhqO-fwYZGeqYz6fuT5dp7dX3rwP51qHCtb_Txba8/edit?usp=sharing>Dreaming in code</a>
-         <p>Code Question coming soon! Just recieved the book and have begun reading it!</p>
-                                    
+         <p>Code Questions</p>
+         <a style = color:black href = https://docs.google.com/document/d/1im0GEQ9XtBnC_Zj0gTO4auEGViQVPPW_b_ZAOxtNRxU/edit?usp=sharing>DevOps</a>
+         <a style = color:black href = https://docs.google.com/document/d/15DDJwpqqO_XW_o2c3IJ0__K0S9Lp7skSj3eEJF81AWc/edit?usp=sharing>Inevitable Pain</a>
+         <a style = color:black href = https://docs.google.com/document/d/1TO3k4qg0ZqWQTugRe66ZNF2JS0TIIAcpk0Dr5SQtTxc/edit?usp=sharing >Big Ball Of Mud</a>
+         <a style = color:black href = https://docs.google.com/document/d/1WXBDr2ZSwuywLzlXWMXM16ap-Vw427HzMPMG5pbcOH4/edit?usp=sharing >Software Is Hard</a>
+   
  <ul>
                 <li> <a href=../index.html>Home </a> </li>
                 <li><a href=../apinvent/index.html>App inventor</a></li>
