--- a/qdocs/qdocs.html
+++ b/qdocs/qdocs.html
@@ -12,12 +12,12 @@
         <li> <a href=https://btetz40.github.io/hlep/index.html>Help </a> </li>
         </ul> 
                             
-         <a style= color:black href=https://docs.google.com/document/d/1xaEhqO-fwYZGeqYz6fuT5dp7dX3rwP51qHCtb_Txba8/edit?usp=sharing>Dreaming in code</a>
-         <p>Code Questions</p>
-         <a style = color:black href = https://docs.google.com/document/d/1im0GEQ9XtBnC_Zj0gTO4auEGViQVPPW_b_ZAOxtNRxU/edit?usp=sharing>DevOps</a>
-         <a style = color:black href = https://docs.google.com/document/d/15DDJwpqqO_XW_o2c3IJ0__K0S9Lp7skSj3eEJF81AWc/edit?usp=sharing>Inevitable Pain</a>
-         <a style = color:black href = https://docs.google.com/document/d/1TO3k4qg0ZqWQTugRe66ZNF2JS0TIIAcpk0Dr5SQtTxc/edit?usp=sharing >Big Ball Of Mud</a>
-         <a style = color:black href = https://docs.google.com/document/d/1WXBDr2ZSwuywLzlXWMXM16ap-Vw427HzMPMG5pbcOH4/edit?usp=sharing >Software Is Hard</a>
+         <h2><a style= color:black href=https://docs.google.com/document/d/1xaEhqO-fwYZGeqYz6fuT5dp7dX3rwP51qHCtb_Txba8/edit?usp=sharing>Dreaming in code</a></h2>
+         <h2><p>Code Questions</p></h2>
+         <h2><a style = color:black href = https://docs.google.com/document/d/1im0GEQ9XtBnC_Zj0gTO4auEGViQVPPW_b_ZAOxtNRxU/edit?usp=sharing>DevOps</a></h2>
+         <h2><a style = color:black href = https://docs.google.com/document/d/15DDJwpqqO_XW_o2c3IJ0__K0S9Lp7skSj3eEJF81AWc/edit?usp=sharing>Inevitable Pain</a></h2>
+         <h2><a style = color:black href = https://docs.google.com/document/d/1TO3k4qg0ZqWQTugRe66ZNF2JS0TIIAcpk0Dr5SQtTxc/edit?usp=sharing >Big Ball Of Mud</a></h2>
+         <h2><a style = color:black href = https://docs.google.com/document/d/1WXBDr2ZSwuywLzlXWMXM16ap-Vw427HzMPMG5pbcOH4/edit?usp=sharing >Software Is Hard</a></h2>
    
  <ul>
                 <li> <a href=../index.html>Home </a> </li>
