--- a/sketckes/index.html
+++ b/sketckes/index.html
@@ -11,7 +11,7 @@
     <p>First example (example 2.2) using brackets and pj.5</p>
     <a style= color:black href=../sketckes/empty-example/index2.html><b>Example 2.2</b></a>
     <p>First try at pj5 on my own</p>
-    <a style= color:black href=../sketckes/empty-example/index.html><b>My Sketch</b></a>
+    <a style= color:black href=../sketckes/empty-example/ttt.js><b>Sketch</b></a>
 
     <ul>
         <li><a href=https://btetz40.github.io/index.html>Home </a></li>
