Made nav bars equal in all

--- a/python/index.html
+++ b/python/index.html
@@ -1,14 +1,17 @@
 <div id="box1"><link rel="stylesheet" type="text/css" href="../css/main.css">
 <h1>Python Programs</h1>
 <ul>
-    <li><a href=https://btetz40.github.io/index.html>Home </a></li>
-    <li><a href=../apinvent/index.html>App inventor</a></li>
-    <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
-    <li><a href=../CIS160Scratch/index.html>Scratch Programs</a></li>
-    <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
-    <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
-    <li><a href=../hlep.index.html>Help</a></li>
-</ul>
+        <li><a href=../apinvent/index.html>App inventor</a></li>
+        <li><a href=../codehs.html>Code Highschool</a></li>
+        <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
+        <li><a href=../circut/index.html>Circuts</a></li>
+        <li><a href= ../grading.html>Grading</a></li>
+        <li><a href=../qdocs/qdocs.html>Reading / Responses</a></li>
+        <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
+        <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
+        <li><a href=../hlep/index.html>Help</a></li>
+
+    </ul>
 <p>Rock Paper Scissors</p>
 <iframe src="https://pastebin.com/embed_iframe/WtSD4Yj0" style="border:none;width:100%"></iframe>
 
@@ -32,12 +35,15 @@
 
 
 <ul>
-        <li><a href=https://btetz40.github.io/index.html>Home </a></li>
         <li><a href=../apinvent/index.html>App inventor</a></li>
+        <li><a href=../codehs.html>Code Highschool</a></li>
         <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
-        <li><a href=../CIS160Scratch/index.html>Scratch Programs</a></li>
+        <li><a href=../circut/index.html>Circuts</a></li>
+        <li><a href= ../grading.html>Grading</a></li>
+        <li><a href=../qdocs/qdocs.html>Reading / Responses</a></li>
+        <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
         <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
-        <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
-        <li><a href=../hlep.index.html>Help</a></li>
+        <li><a href=../hlep/index.html>Help</a></li>
+
     </ul>
 </div id="box1">
