--- a/apinvent/index.html
+++ b/apinvent/index.html
@@ -4,11 +4,14 @@
 <h3> Links</h3>
 <ul>
     <li><a href=../index.html>Home</a></li>
+    <li><a href=../codehs.html>Code Highschool</a></li>
     <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
+    <li><a href=../circut/index.html>Circuts</a></li>
+    <li><a href= ../grading.html>Grading</a></li>
     <li><a href=../python/index.html>Python Programs</a></li>
+    <li><a href=../qdocs/qdocs.html>Reading / Responses</a></li>
     <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
     <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
-    <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
     <li><a href=../hlep/index.html>Help</a></li>
 </ul>
 
@@ -16,13 +19,18 @@
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/yYvOgXcL-xk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<ul>
-        <li><a href=../index.html>Home</a></li>
-        <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
-        <li><a href=../python/index.html>Python Programs</a></li>
-        <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
-        <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
-        <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
-        <li><a href=../hlep/index.html>Help</a></li>
-    </ul>
+
+        <ul>
+                <li><a href=../index.html>Home</a></li>
+                <li><a href=../codehs.html>Code Highschool</a></li>
+                <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
+                <li><a href=../circut/index.html>Circuts</a></li>
+                <li><a href= ../grading.html>Grading</a></li>
+                <li><a href=../python/index.html>Python Programs</a></li>
+                <li><a href=../qdocs/qdocs.html>Reading / Responses</a></li>
+                <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
+                <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
+                <li><a href=../hlep/index.html>Help</a></li>
+            </ul>
+
 
