--- a/circut/index.html
+++ b/circut/index.html
@@ -3,14 +3,17 @@
 
 <h1>Circuts</h1>
 <ul>
-    <li> <a href=../index.html>Home </a> </li>
-    <li><a href=../apinvent/index.html>App inventor</a></li>
-    <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a> </li>
-    <li><a href=../python/index.html>Python</a></li>
-    <li><a href=../CIS160Scratch.html>Scratch Programs</a> </li> 
-    <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
-    <li> <a href=https://btetz40.github.io/hlep/index.html>Help </a> </li>
-    </ul> 
+        <li><a href=../apinvent/index.html>App inventor</a></li>
+        <li><a href=../codehs.html>Code Highschool</a></li>
+        <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
+        <li><a href= ../grading.html>Grading</a></li>
+        <li><a href=../python/index.html>Python Programs</a></li>
+        <li><a href=../qdocs/qdocs.html>Reading / Responses</a></li>
+        <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
+        <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
+        <li><a href=../hlep/index.html>Help</a></li>
+
+    </ul>
 
 <h2>Level-triggered D-Tyle flip-flop</h2>
 <img src="8bitadder.PNG" alt="8bit">
@@ -35,11 +38,14 @@
 
 
 <ul>
-    <li> <a href=../index.html>Home </a> </li>
-    <li><a href=../apinvent/index.html>App inventor</a></li>
-    <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a> </li>
-    <li><a href=../python/index.html>Python</a></li>
-    <li><a href=../CIS160Scratch.html>Scratch Programs</a> </li> 
-    <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
-    <li> <a href=https://btetz40.github.io/hlep/index.html>Help </a> </li>
-    </ul> 
+        <li><a href=../apinvent/index.html>App inventor</a></li>
+        <li><a href=../codehs.html>Code Highschool</a></li>
+        <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
+        <li><a href= ../grading.html>Grading</a></li>
+        <li><a href=../python/index.html>Python Programs</a></li>
+        <li><a href=../qdocs/qdocs.html>Reading / Responses</a></li>
+        <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
+        <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
+        <li><a href=../hlep/index.html>Help</a></li>
+
+    </ul>
