--- a/codehs.html
+++ b/codehs.html
@@ -1,15 +1,18 @@
 <div id="box1">
         <link rel="stylesheet" type="text/css" href="../css/main.css">
-        <h1>Computer Science Home</h1>
+        <h1>Code Highschool</h1>
     <h3> Links</h3>
     <ul>
-        <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
-        <li><a href=../python/index.html>Python Programs</a></li>
-        <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
-        <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
-        <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
-        <li><a href=../apinvent/index.html>App inventor</a></li>
-        <li><a href=../hlep/index.html>Help</a></li>
+            <li><a href=../index.html>Home</a></li>
+            <li><a href=../apinvent/index.html>App inventor</a></li>
+            <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
+            <li><a href=../circut/index.html>Circuts</a></li>
+            <li><a href= ../grading.html>Grading</a></li>
+            <li><a href=../python/index.html>Python Programs</a></li>
+            <li><a href=../qdocs/qdocs.html>Reading / Responses</a></li>
+            <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
+            <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
+            <li><a href=../hlep/index.html>Help</a></li>
 
     </ul>
 
@@ -18,14 +21,18 @@
 
 
 
-<ul>
-        <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
-        <li><a href=../python/index.html>Python Programs</a></li>
-        <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
-        <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
-        <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
-        <li><a href=../apinvent/index.html>App inventor</a></li>
-        <li><a href=../hlep/index.html>Help</a></li>
-</ul>
+    <ul>
+            <li><a href=../index.html>Home</a></li>
+            <li><a href=../apinvent/index.html>App inventor</a></li>
+            <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
+            <li><a href=../circut/index.html>Circuts</a></li>
+            <li><a href= ../grading.html>Grading</a></li>
+            <li><a href=../python/index.html>Python Programs</a></li>
+            <li><a href=../qdocs/qdocs.html>Reading / Responses</a></li>
+            <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
+            <li><a href=https://btetz40.github.io/sketckes/index.html>Sketch</a></li>
+            <li><a href=../hlep/index.html>Help</a></li>
+
+    </ul>
 
 </div id="box1">
