--- a/sketckes/index.html
+++ b/sketckes/index.html
@@ -3,10 +3,14 @@
     <h1>PJ5 Sketches</h1>
     <ul>
         <li><a href=https://btetz40.github.io/index.html>Home </a></li>
+        <li><a href=../codehs.html>Code Highschool</a></li>
         <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
-        <li><a href=../CIS160Scratch/index.html>Scratch Programs</a></li>
-        <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
-        <li><a href=../hlep.index.html>Help</a></li>
+        <li><a href=../circut/index.html>Circuts</a></li>
+        <li><a href= ../grading.html>Grading</a></li>
+        <li><a href=../python/index.html>Python Programs</a></li>
+        <li><a href=../qdocs/qdocs.html>Reading / Responses</a></li>
+        <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
+        <li><a href=../hlep/index.html>Help</a></li>
     </ul>
     <p>First example (example 2.2) using brackets and pj.5</p>
     <a style= color:black href=../sketckes/empty-example/index2.html><b>Example 2.2</b></a>
@@ -14,10 +18,14 @@
     <a style= color:black href=../sketckes/empty-example/ttt.js><b>Sketch</b></a>
 
     <ul>
-        <li><a href=https://btetz40.github.io/index.html>Home </a></li>
-        <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
-        <li><a href=../CIS160Scratch/index.html>Scratch Programs</a></li>
-        <li><a href=../qdocs/qdocs.html>Reading questions</a></li>
-        <li><a href=../hlep.index.html>Help</a></li>
-    </ul>
+            <li><a href=https://btetz40.github.io/index.html>Home </a></li>
+            <li><a href=../codehs.html>Code Highschool</a></li>
+            <li><a href=https://btetz40.github.io/Collegeinfo/index.html>Grad Programs</a></li>
+            <li><a href=../circut/index.html>Circuts</a></li>
+            <li><a href= ../grading.html>Grading</a></li>
+            <li><a href=../python/index.html>Python Programs</a></li>
+            <li><a href=../qdocs/qdocs.html>Reading / Responses</a></li>
+            <li><a href=https://btetz40.github.io/CIS160Scratch/index.html>Scratch Programs</a></li>
+            <li><a href=../hlep/index.html>Help</a></li>
+        </ul>
     </div id="box1">
