--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <p><a style= color:black href=../python/index.html>Python Programs</a></p>
     <p><a style= color:black href=https://docs.google.com/document/d/1wg2UkiYIkX6iKOMx1LinZZEEImRdkEWJu27i5mcn4YY/edit?usp=sharing>Grading rubric</a></p>
     <p><a style= color:black href=../circut/index.html>Circuts</a></p>
+    <p><a style = color:black href = https://docs.google.com/document/d/1hHxByNsHkDY2wphNRlrRM801sRZ6x4gn-6hoCvjePms/edit?usp=sharing>Final Response</a></p>
+    <p><a style = color:black href = https://docs.google.com/document/d/1UMdKaDm7hNQ6ZAf1jgfWcFWpwOS7lD3jUzo8MTx5Tn0/edit?usp=sharing>Final Grading Rubric</a></p>
 
     <ul>
             <li><a href=../apinvent/index.html>App inventor</a></li>
