--- a/qdocs/qdocs.html
+++ b/qdocs/qdocs.html
@@ -22,6 +22,9 @@
          <h2><a style = color:black href = https://docs.google.com/document/d/15DDJwpqqO_XW_o2c3IJ0__K0S9Lp7skSj3eEJF81AWc/edit?usp=sharing>Inevitable Pain</a></h2>
          <h2><a style = color:black href = https://docs.google.com/document/d/1TO3k4qg0ZqWQTugRe66ZNF2JS0TIIAcpk0Dr5SQtTxc/edit?usp=sharing >Big Ball Of Mud</a></h2>
          <h2><a style = color:black href = https://docs.google.com/document/d/1WXBDr2ZSwuywLzlXWMXM16ap-Vw427HzMPMG5pbcOH4/edit?usp=sharing >Software Is Hard</a></h2>
+         <h2><a style = color:black href = https://docs.google.com/document/d/1hHxByNsHkDY2wphNRlrRM801sRZ6x4gn-6hoCvjePms/edit?usp=sharing>Final Response</a></h2>
+         <h2><a style = color:black href = https://docs.google.com/document/d/1UMdKaDm7hNQ6ZAf1jgfWcFWpwOS7lD3jUzo8MTx5Tn0/edit?usp=sharing>Final Grading Rubric</a></h2>
+
    
  <ul>
         <li> <a href=../index.html>Home </a> </li>
